2024-03-09 : removed run-tester stuff that I forgot was there. may fix issue with link to gemsrun not updating properly
2024-03-09 : formatting fix
2024-03-09 : used better x-plat approach to opening media folder
2024-03-09 : fixed default env image name broken in last commit
2024-03-09 : fixed start-end size disparity in default environment
2024-03-09 : fixed some of the visual/text changes sugested by JK
2024-03-09 : fixed some of the visual/text changes sugested by JK
2024-03-07 : added console scripts in setup.py
2024-03-06 : Merge remote-tracking branch 'origin/main'
2024-03-06 : initial private github commit - really just testing whether i can get to this via pipx
2024-03-06 : initial private github commit - really just testing whether i can get to this via pipx
2024-03-06 : Initial commit